# algorithm

Tailhead/: main.c
array_2d/: main.c
array_adt/: main.c
array_chllange/: main.c
array_cpp/: main.c
array_increase/: main.c
array_static/: main.c
avl_tree/: main.c  makefile  tree.h
binary_search_tree/: main.c  makefile  tree.h
binarytree/: main.c  tree.c
chainning/: main.c
eigen/: eigen.c  eigen.h  main.c  makefile
graph_bfs_dfs/: main.c
graph_krusk/: main.c
graph_prim/: main.c
hash_double/: main.c
hash_linear/: chains.h  main.c
heap/: main.c
linklist_circular/: main.c
linklist_display/: main.c
linklist_doubly/: main.c
linklist_poly/: main.c
matrix/: main.c
matrix_diagnal/: main.c
matrix_lo_triangular/: main.c
matrix_poly/: main.c
matrix_sparse/: main.c
matrix_up_traingular/: main.c
minesweeper/: CMakeLists.txt  README.md
minesweeper/inc/: minesweeper.h
minesweeper/sln/: solution.c
msg_queue/: queue_util.c  queue_util.h
msg_queue_client/: main.c  makefile
queue_array/: main.c
queue_linklist/: main.c
recursion_fac/: main.c  makefile
recursion_fib_mem/: main.c
recursion_hanoi/: main.c
recursion_indirect/: main.c
recursion_ncr/: main.c
recursion_nested/: main.c
recursion_power/: main.c
recursion_static/: main.c
recursion_sum/: main.c
recursion_taylor/: main.c
state_machine_utility/: CMakeLists.txt  main.c  makefile  st_util.c  st_util.h  version.h.in
state_machine_utility/queue/: CMakeLists.txt  queue_util.c
state_machine_utility/st/: CMakeLists.txt  st_util.c  st_util.h
(+13 files in other folders)
